# Chronograph

./: .gitignore  .pylintrc  CONTRIBUTING.md  Chronograph.doap  README.md  io.github.dzheremi2.Chronograph.yaml  io.github.dzheremi2.lrcmake-gtk.yaml  meson.build  meson_options.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto_issue_labels.yml  build-devel-appimage.yml  build-devel-linux.yml  build-devel-windows.yml  build-devel.yml  build-release-appimage.yml  build-release-linux.yml  build-release-windows.yml  build-release.yml  build_debug_windows.yml  build_release_windows.yml  ci.yml  release.yml  rewrite.yml
build-aux/appimage/: BUILD_PROCESS.md  README.md  build-in-sdk.sh  build.sh  requirements.txt
build-aux/flatpak/: io.github.dzheremi2.lrcmake-gtk.yaml  io.github.dzheremi2.lrcmake_gtk.Devel.yaml
build-aux/windows/: debug_runner.py  launcher.py
chronograph/: __init__.py  chronograph.in  internal.py.in  internal.pyi  logger.py  main.py  meson.build  shared.py.in  shared.pyi  win_launcher.py  window.py  window.pyi
chronograph/backend/: converter.py  file_parsers.py  invalidators.py  player.py
chronograph/backend/asynchronous/: __init__.py  async_task.py
chronograph/backend/db/: __init__.py  models.py
chronograph/backend/file/: __init__.py  _song_card_model.py  available_lyrics.py  library_manager.py  library_model.py  song_card_model.py
chronograph/backend/lrclib/: __init__.py  cryptograpic_challenge.py  exceptions.py  lrclib_enums.py  lrclib_service.py  responses.py
chronograph/backend/lyrics/: __init__.py  formats.py  interfaces.py  lyrics.py  lyrics_file.py  store.py
chronograph/backend/lyrics/chronie/: __init__.py  chronie_lyrics.py  data.py
chronograph/backend/lyrics/formats/: __init__.py  common.py  elrc.py  lrc.py  merge.py  plain.py  tokens.py  utils.py
chronograph/backend/media/: __init__.py  file.py  file_mutagen_id3.py  file_mutagen_mp4.py  file_mutagen_vorbis.py  file_untaggable.py
chronograph/backend/wbw/: token_parser.py  tokens.py
chronograph/backend/wbw/models/: line_model.py  lyrics_model.py  word_model.py
chronograph/db/: __init__.py  models.py
chronograph/ui/: BoxDialog.py  ListViewRow.py  Preferences.py  Preferences.pyi  SavedLocation.py  SavedLocation.pyi  SongCard.py  SongCard.pyi  SyncLine.py  __init__.py  playerui.py  song_card.py
chronograph/ui/dialogs/: __init__.py  about_file_dialog.py  box_dialog.py  import_dialog.py  importing_dialog.py  lrclib.py  mass_downloading_dialog.py  metadata_editor.py  preferences.py  resync_all_alert_dialog.py  tag_registration_dialog.py
chronograph/ui/sync_pages/: __init__.py  lrc_sync_page.py  wbw_sync_page.py
chronograph/ui/widgets/: __init__.py  _song_card.py  bookmark.py  library.py  lrclib_track.py  lyric_row.py  player.py  saved_location.py  song_card.py  tag_row.py  ui_player.py
chronograph/ui/widgets/internal/: menu_button.py
chronograph/ui/widgets/wbw/: __init__.py  line_widget.py  lyrics_widget.py  word_widget.py
chronograph/utils/: __init__.py  _lyrics.py  caching.py  converter.py  export_data.py  file.py  file.pyi  file_mutagen_id3.py  file_mutagen_id3.pyi  file_mutagen_mp4.py  file_mutagen_mp4.pyi  file_mutagen_vorbis.py  file_mutagen_vorbis.pyi  file_parsers.py  file_untaggable.py  invalidators.py  launch.py  lyrics.py  lyrics_file_helper.py  miscellaneous.py  parsers.py  parsers.pyi  player.py  publish.py  publish.pyi  select_data.py  select_data.pyi
chronograph/utils/file_backend/: __init__.py  file.py  file.pyi  file_manager.py  file_mutagen_id3.py  file_mutagen_id3.pyi  file_mutagen_mp4.py  file_mutagen_mp4.pyi  file_mutagen_vorbis.py  file_mutagen_vorbis.pyi  file_untaggable.py  library_model.py  song_card_model.py
chronograph/utils/lyrics/: lyrics.py  lyrics_file.py  lyrics_format.py
chronograph/utils/media/: file.py  file_mutagen_id3.py  file_mutagen_mp4.py  file_mutagen_vorbis.py  file_untaggable.py
chronograph/utils/wbw/: __init__.py  data.py  elrc_parser.py  token_parser.py  tokens.py
chronograph/utils/wbw/models/: __init__.py  line_model.py  lyrics_model.py  word_model.py
data/: Chronograph.gresource.xml.in  io.github.dzheremi2.Chronograph.desktop.in  io.github.dzheremi2.Chronograph.gschema.xml.in  io.github.dzheremi2.Chronograph.metainfo.xml.in  io.github.dzheremi2.lrcmake-gtk.desktop.in  io.github.dzheremi2.lrcmake-gtk.gschema.xml.in  io.github.dzheremi2.lrcmake-gtk.metainfo.xml.in  io.github.dzheremi2.lrcmake-gtk.service.in  meson.build
data/gtk/: meson.build  window.blp  window.blp.in
data/gtk/css/: style-dark.css  style.css
data/gtk/ui/: LRCSyncPage.blp  ListViewRow.blp  LrclibTrack.blp  PlayerUI.blp  Preferences.blp  SavedLocation.blp  SongCard.blp  SyncLine.blp  shortcuts-dialog.blp
data/gtk/ui/dialogs/: AboutFileDialog.blp  BoxDialog.blp  ImportDialog.blp  ImportingDialog.blp  LRClib.blp  MassDownloadingDialog.blp  MetadataEditor.blp  Preferences.blp  ResyncAllAlertDialog.blp
data/gtk/ui/sync_pages/: LRCSyncPage.blp  WBWSyncPage.blp
data/gtk/ui/widgets/: Bookmark.blp  LRClibTrack.blp  Player.blp  SavedLocation.blp  SongCard.blp  TagRow.blp  UIPlayer.blp  _SongCard.blp
data/gtk/ui/widgets/wbw/: LyricsWidget.blp  WordWidget.blp
data/resources/: constants.yaml.in  meson.build  schema.yaml
data/resources/actions/: lrc_sync_page_actions.yaml  lrclib.yaml  metadata_editor.yaml  wbw_sync_page_actions.yaml
dgutils/: __init__.py  actions.py  constants.py  decorators.py  exceptions.py  linker.py  schema.py  singleton.py  typing.py
docs/: CHANGELOG.md
docs/schemas/: DBv1_schema.sql  Schema-schema.json  appstream-metainfo.xsd  chronie-schema.yaml
po/: Chronograph.pot  LINGUAS  POTFILES.in  de.po  el.po  es.po  et.po  fi.po  fr.po  he.po  hu.po  ia.po  id.po  is.po  it.po  jp.po  ko.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  ta.po  tr.po  ua.po  uk.po  vi.po  zh_Hans.po
subprojects/: blueprint-compiler.wrap
subprojects/blueprint-compiler/: .meson-subproject-wrap-hash.txt
